@@ -1,5 +1,9 @@
+HEAD
+       + Changed location of freshclam state file, maybe it could solve
+       some notification errors in some installations
 1.3.12
 	+ Add page title
+
 1.3.10
 	+ Use disableApparmorProfile from EBox::Module::Service
 	  in setConf to avoid issues if apparmor is installed
